cmake_minimum_required(VERSION 3.10)
project(problem_017)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(code main.cpp)
# Optimize for speed and disable exceptions (optional per constraints)
set_target_properties(code PROPERTIES COMPILE_FLAGS "-O2 -pipe -static -s")
